Fixed text align

--- a/src/styles/UnderConstruction.css
+++ b/src/styles/UnderConstruction.css
@@ -1,3 +1,7 @@
+.UnderConstruction {
+    text-align: center;
+}
+
 .UnderConstruction img {
     width: 30%;
     min-width: 100px;
